@@ -43,9 +43,12 @@ extern MagickExport MagickBooleanType
   LevelImage(Image *,const char *),
   LevelImageChannel(Image *,const ChannelType,const double,const double,
     const double),
+  LevelizeImage(Image *,const double,const double,const double),
   LevelizeImageChannel(Image *,const ChannelType,const double,const double,
     const double),
-  LevelImageColors(Image *,const ChannelType,const MagickPixelPacket *,
+  LevelColorsImage(Image *,const MagickPixelPacket *,const MagickPixelPacket *,
+    const MagickBooleanType),
+  LevelColorsImageChannel(Image *,const ChannelType,const MagickPixelPacket *,
     const MagickPixelPacket *,const MagickBooleanType),
   LinearStretchImage(Image *,const double,const double),
   ModulateImage(Image *,const char *),
